# pelagos-ui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  TESTING.md  package-lock.json  package.json  pelagos-ui.out  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/pelagos-protocol/: Cargo.toml
crates/pelagos-protocol/src/: command.rs  lib.rs  response.rs  types.rs
scripts/: build-release.sh  install-dev-deps.sh  pelagos-waybar-status  test-logs.sh  update-tap.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  terminal.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  terminal.rs
src-tauri/src/backend/: mod.rs  process.rs  vsock.rs
src/lib/: ipc.ts
src/lib/components/: BulkRemove.test.ts  ContainerRow.svelte  ImagePane.svelte  ImagePane.test.ts  ImagesView.svelte  KubernetesPane.svelte  LogsPanel.svelte  RunPanel.svelte  StatusBadge.svelte
src/lib/stores/: containers.ts
src/routes/: +page.svelte
src/routes/terminal/: +page.svelte
