[package]
name = "pelagos-ui"
version = "0.1.5"
edition = "2021"

[lib]
name = "pelagos_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "net", "time", "macros"] }
async-trait  = "0.1"
thiserror    = "2"
log          = "0"
env_logger   = "0"
which        = "6"
portable-pty = "0.8"
uuid         = { version = "1", features = ["v4"] }
pelagos-protocol = { path = "../crates/pelagos-protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
