[package]
name = "pelagos-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared types for the pelagos vsock IPC protocol (host ↔ guest)"
license = "Apache-2.0"
repository = "https://github.com/pelagos-containers/pelagos-ui"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
